assets/css/main.css
---
---

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --taskbar-height: 4rem;
}

dialog {
  margin: 0;
  position: fixed;
}

[data-tooltip]::after {
  --scale: 0;
  content: "";
  font: initial;
  font-size: 1rem;
  position: absolute;
  left: 50%;
  top: 100%;
  transform: translateX(-50%) scale(var(--scale));
  width: 200%;
  padding: 0.25rem;
  border-radius: 8%;
  background-color: #eee;
}

[data-tooltip]:hover::after {
  --scale: 1;
  content: attr(data-tooltip);
  transition: transform 100ms 600ms;
}

[data-tooltip].wide-tooltip::after {
  width: 300%;
}

dialog:has(> div.photos), dialog:has(> div.videos) {
  width: fit-content;
  height: fit-content;
}

